# NormalRender

./: .gitignore  CMakeLists.txt  CMakeLists_OpenGL.txt  CMakelists.txt  README.md  run_all.sh
.github/workflows/: ccpp.yml
include/: camera.h  collision.h  color.h  detector.h  entities.h  light.h  manager.h  materials.h  parser.h  presenter.h  ray.h  scene.h
src/: camera.cpp  collision.cpp  color.cpp  detector.cpp  entities.cpp  light.cpp  main.cpp  manager.cpp  materials.cpp  parser.cpp  presenter.cpp  scene.cpp
testcases/: scene01_basic.txt  scene02_cube.txt  scene03_sphere.txt  scene04_axes.txt  scene08_core.txt  scene09_norm.txt  scene10_wineglass.txt  scene11_bunny_ffd.txt  scene11_singlecurve.txt  scene12_cylinder_ffd.txt  scene13_fish_ffd.txt
